# thai-lint

./: .coverage.AZLNXSJACKSON.1489022.XnPoyepx  .coverage.AZLNXSJACKSON.1489024.XZJWLQDx  .dockerignore  .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .security-ignore  .thailint.yaml  .thailintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  coverage.xml  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.ai/: ai-context.md  ai-rules.md  index.yaml  layout.yaml
.ai/docs/: FILE_HEADER_STANDARDS.md  PRE_COMMIT_STANDARDS.md  PROJECT_CONTEXT.md  ROADMAP_WORKFLOW.md  SARIF_STANDARDS.md  SECURITY_STANDARDS.md  api-documentation.md  code-scanning.md  dependency-scanning.md  file-headers.md  python-cli-architecture.md  readme-standards.md  secrets-management.md
.ai/docs/repository/: ENVIRONMENT_STANDARDS.md  environment-variables-best-practices.md
.ai/howtos/: documentation-howtos-README.md  how-to-add-custom-hook.md  how-to-add-linter.md  how-to-address-github-issues.md  how-to-configure-code-scanning.md  how-to-create-readme.md  how-to-debug-failing-hooks.md  how-to-document-api.md  how-to-fix-lazy-ignores.md  how-to-fix-linting-errors.md  how-to-install-pre-commit.md  how-to-prevent-secrets-in-git.md  how-to-refactor-for-quality.md  how-to-roadmap.md  how-to-setup-dependency-scanning.md  how-to-write-file-headers.md  how-to-write-tests.md
.ai/howtos/python-cli/: README.md  how-to-add-cli-command.md  how-to-create-github-release.md  how-to-handle-config-files.md  how-to-package-cli-tool.md  how-to-publish-to-pypi.md
.ai/howtos/repository/: environment-setup-readme.md
.ai/templates/: README.template  file-header-markdown.template  file-header-python.template  file-header-typescript.template  file-header-yaml.template  roadmap-pr-breakdown.md.template
.ai/templates/python-cli/: cli-entrypoint.py.template  config-loader.py.template  setup.py.template
.github/workflows/: docs.yml  lint.yml  publish-pypi.yml  publish.yml  sarif-example.yml  security.yml  test.yml
.roadmap/complete/collection-pipeline-linter/: PROGRESS_TRACKER.md
.roadmap/complete/consultant-grade-improvements/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/complete/dry-linter/: AI_CONTEXT.md  PROGRESS_TRACKER.md  VIOLATIONS.md
.roadmap/complete/enterprise-linter/: PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/complete/file-header-linter/: AI_CONTEXT.md
.roadmap/complete/lazy-ignores/: PROGRESS_TRACKER.md
.roadmap/complete/lbyl/: PROGRESS_TRACKER.md
.roadmap/complete/magic-numbers-linter/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/complete/method-should-be-property/: EXECUTIVE_SUMMARY.md
.roadmap/complete/nesting-linter/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md  VIOLATIONS.md
.roadmap/complete/python-cli-install/: AI_CONTEXT.md  PR_BREAKDOWN.md
.roadmap/complete/rust-linter-support/: AI_CONTEXT.md  PR_BREAKDOWN.md
.roadmap/complete/sarif-output-format/: PROGRESS_TRACKER.md
.roadmap/complete/srp-linter/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md  (+1 more)
.roadmap/python-cli-install/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
docs/: ai-doc-standard.md  api-reference.md  blocking-async-linter.md  cli-reference.md  clone-abuse-linter.md  collection-pipeline-linter.md  configuration.md  cqs-linter.md  deployment-modes.md  dry-linter.md  file-header-linter.md  file-placement-linter.md  getting-started.md  how-to-ignore-violations.md  improper-logging-linter.md  index.md  law-of-demeter-linter.md  lazy-ignores-linter.md  lbyl-linter.md  magic-numbers-linter.md  method-property-linter.md  nesting-linter.md  performance-linter.md  pre-commit-hooks.md  print-statements-linter.md  publishing-checklist.md  quick-start.md  releasing.md  requirements.txt  rust-trials-report.md  sarif-output.md  srp-linter.md  stateless-class-linter.md  stringly-typed-linter.md  troubleshooting.md  unwrap-abuse-linter.md  validation-findings.md  version-freshness-linter.md
docs/quick-reference/: architecture.html  cli-cheatsheet.html  config-reference.html  index.html  linter-flow.html  plugin-guide.html
examples/: .thailint.json.example  .thailint.yaml.example  README.md  advanced_usage.py  basic_usage.py  ci_integration.py  file_header_usage.py  magic_numbers_usage.py  nesting_usage.py  sarif_usage.py  srp_usage.py
scripts/: TEST_OPTIMIZATION_README.md  analyze_test_coverage.py  batch_remove_tests.py  check_critical_cves.py  git-share.sh  lod_prototype.py  optimize_tests.sh  publish.sh  remove_all_100pct_duplicates.py  remove_all_skipped_tests.py  remove_redundant_tests.py  remove_skipped_tests_ast.py  skip_duplicate_tests.py  validate-cli-setup.sh
src/: __init__.py  cli.py  cli_main.py  config.py
src/.ai/: layout.yaml
src/analyzers/: rust_base.py  rust_context.py
src/cli/: __init__.py  config.py  main.py  utils.py
src/core/: __init__.py  base.py  cli_utils.py  config_parser.py  constants.py  linter_utils.py  python_lint_rule.py  registry.py  rule_aliases.py  rule_discovery.py  types.py  violation_builder.py
src/formatters/: sarif.py
src/linter_config/: __init__.py  ignore.py  loader.py  pattern_utils.py  rule_matcher.py
src/orchestrator/: __init__.py  core.py  language_detector.py
src/templates/: thailint_config_template.yaml
src/utils/: project_root.py
tests/: __init__.py  conftest.py  test_cli.py
tests/integration/: __init__.py  test_artifacts_generation.py  test_cli_multiple_files.py  test_e2e_cli.py  test_e2e_docker.py  test_e2e_library.py  test_performance.py  test_performance_linter.py  test_real_world.py  test_sarif_all_linters.py
tests/unit/: __init__.py  test_cli_config_inference.py  test_cli_project_root.py  test_cli_sarif_output.py
(+499 files in other folders)
